--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.3",
     "next-auth": "^4.24.13",
     "next-intl": "^4.5.3",
+    "nodemailer": "^7.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "swiper": "^12.0.3",
@@ -25,6 +26,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
