--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed:shipping": "npx tsx scripts/seedShippingZones.ts",
+    "seed:products": "npx tsx scripts/seedProducts.ts"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "mongoose": "^8.20.1",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
+    "next-cloudinary": "^6.17.5",
     "next-intl": "^4.5.3",
     "nodemailer": "^7.0.10",
     "react": "19.2.0",
